--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">LithGen, Inc © Copyright 2023</p>
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">© 2023 LITHGEN ENERGY, INC. All rights reserved.</p>
             </div>
         </div>
     </div>  
